--- a/practice/build.gradle
+++ b/practice/build.gradle
@@ -33,6 +33,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation "com.squareup.okhttp3:okhttp:4.9.1"
 	implementation group:'org.json', name: 'json', version:'20090211'
+	implementation 'org.apache.poi:poi:5.0.0'
+	implementation 'org.apache.poi:poi-ooxml:5.0.0'
 }
 
 tasks.named('test') {
